--- a/app/src/assets/sass/paper/_style.scss
+++ b/app/src/assets/sass/paper/_style.scss
@@ -2,7 +2,16 @@
 //     border-radius: 50px !important;
 // }
 
+input{
+    color: #03A9F4 !important;
+}
 
+.alert,
+.alert-danger {
+    display: block;
+    color: #FFFFFF !important;
+    max-width: 89%;
+}
 
 @media (min-width: 768px) {
 
@@ -29,6 +38,11 @@
         transform: translate(-50%, -50%);
     }
         
+}
+
+a:hover, a:focus {
+    color: #03A9F4;
+    text-decoration: underline;
 }
 
 
@@ -154,7 +168,8 @@
     color: #03A9F4;
 }
 
-.btn-blue:hover {
+.btn-blue:hover,
+.btn-blue:focus {
     background: #03A9F4;
     border-radius: 50px;
     border: none;
@@ -167,6 +182,20 @@
 
 .justify-content-space-around {
     justify-content: space-around;
+}
+
+.btn-white {
+    background: #FFFFFF;
+    border-radius: 50px;
+    border: 2px solid #03A9F4;
+    color: #03A9F4;
+}
+
+.btn-white:hover {
+    background: #03A9F4;
+    border-radius: 50px;
+    border: 2px solid #03A9F4;
+    color: #FFFFFF;
 }
 
 .border-grey {
@@ -187,17 +216,20 @@
     background-color: #fff;
     color: #495057;
     background-color: #fff;
-    border-color: #80bdff;
+    border: 2px solid #03A9F4;
+    border-radius: 20px;
+    // border-color: #80bdff;
     outline: 0;
-    box-shadow: 10px 10px 10px rgba(204, 197, 185, 0.5) !important;
+    // box-shadow: 10px 10px 10px rgba(204, 197, 185, 0.5) !important;
 }
 
 .form-control:focus {
-    color: #495057;
-    background-color: #fff;
-    border-color: #80bdff;
-    outline: 0;
-    box-shadow: 10px 10px 10px rgba(204, 197, 185, 0.5) !important;
+    // color: #495057;
+    // background-color: #fff;
+    // border-color: #80bdff;
+    // outline: 0;
+    // box-shadow: 10px 10px 10px rgba(204, 197, 185, 0.5) !important;
+    border: 2px solid #03A9F4;
 }
 
 #footer {
@@ -218,10 +250,11 @@
 
 
 #middle-screen {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 2;
 }
 
 .text-decoration-urderline {
