--- a/app/src/assets/sass/paper/_style.scss
+++ b/app/src/assets/sass/paper/_style.scss
@@ -24,6 +24,13 @@
         
 }
 
+#home {
+    height: 100vh;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 #hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/home/hero.png");
     height: 100%;
@@ -132,6 +139,16 @@ input{
     border-radius: 50px;
     border: none;
     color: #FFFFFF;
+}
+
+.container-fluid {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.custom-select {
+    border-radius: 20px;
+    border: 2px solid #03A9F4;
 }
 
 .VueCarousel-dot {
