fix - ajustes nas cores de notificação

--- a/app/src/assets/sass/paper/_style.scss
+++ b/app/src/assets/sass/paper/_style.scss
@@ -81,6 +81,17 @@ html {
     max-width: 89%;
 }
 
+.alert-danger {
+    background-color: #c21414 !important;
+}
+
+.alert-success {
+    background-color: #41B883 !important;
+}
+.alert-warning {
+    background-color: #e9ec05 !important;
+}
+
 .bg-dark {
     background-color: #000000 !important;
 }
