--- a/app/src/assets/sass/paper/_style.scss
+++ b/app/src/assets/sass/paper/_style.scss
@@ -24,6 +24,12 @@
         
 }
 
+@media (max-width: 576px) {
+    .dropdown-toggle {
+        align-items: center;
+    }
+}
+
 #home {
     height: 100vh;
     width: 100%;
@@ -287,6 +293,10 @@ html {
 
 .form-control:focus {
     border: 2px solid #03A9F4;
+}
+
+.navbar .navbar-nav .nav-item .nav-link {
+    font-size: inherit !important;
 }
 
 .navbar-nav a {
